--- a/apps/bar/manifests.yaml
+++ b/apps/bar/manifests.yaml
@@ -1,5 +1,11 @@
 ---
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bar
+  namespace: default
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: bar
@@ -27,8 +33,55 @@ spec:
       labels:
         app: bar
     spec:
+      serviceAccountName: bar
       containers:
         - name: bar
           image: bar:latest
           ports:
             - containerPort: 8080
+---
+apiVersion: policy.linkerd.io/v1beta2
+kind: HTTPRoute
+metadata:
+  name: bar-root-route
+  namespace: default
+  annotations:
+    retry.linkerd.io/http: "5xx"
+    retry.linkerd.io/limit: "3"
+    retry.linkerd.io/timeout: 1s
+spec:
+  parentRefs:
+    - name: bar
+      kind: Service
+      group: core
+      port: 80
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: "/"
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: Server
+metadata:
+  name: bar
+  namespace: default
+spec:
+  podSelector:
+    matchLabels:
+      app: bar
+  port: http
+  proxyProtocol: HTTP/2
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: ServerAuthorization
+metadata:
+  namespace: default
+  name: bar-from-foo
+spec:
+  server:
+    name: bar
+  client:
+    meshTLS:
+      identities:
+        - "foo.default.serviceaccount.identity.linkerd.cluster.local"
