--- a/apps/baz/manifests.yaml
+++ b/apps/baz/manifests.yaml
@@ -1,5 +1,11 @@
 ---
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: baz
+  namespace: default
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: baz
@@ -11,6 +17,8 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
+      name: http
+      protocol: TCP
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -27,8 +35,56 @@ spec:
       labels:
         app: baz
     spec:
+      serviceAccountName: baz
       containers:
         - name: baz
           image: baz:latest
           ports:
             - containerPort: 8080
+              name: http
+---
+apiVersion: policy.linkerd.io/v1beta2
+kind: HTTPRoute
+metadata:
+  name: baz-root-route
+  namespace: default
+  annotations:
+    retry.linkerd.io/http: "5xx"
+    retry.linkerd.io/limit: "3"
+    retry.linkerd.io/timeout: 1s
+spec:
+  parentRefs:
+    - name: baz
+      kind: Service
+      group: core
+      port: 80
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: "/"
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: Server
+metadata:
+  name: baz
+  namespace: default
+spec:
+  podSelector:
+    matchLabels:
+      app: baz
+  port: http
+  proxyProtocol: HTTP/2
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: ServerAuthorization
+metadata:
+  namespace: default
+  name: baz-from-foo
+spec:
+  server:
+    name: baz
+  client:
+    meshTLS:
+      identities:
+        - "foo.default.serviceaccount.identity.linkerd.cluster.local"
