--- a/apps/foo/manifests.yaml
+++ b/apps/foo/manifests.yaml
@@ -1,5 +1,11 @@
 ---
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: foo
+  namespace: default
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: foo
@@ -29,6 +35,7 @@ spec:
       labels:
         app: foo
     spec:
+      serviceAccountName: foo
       containers:
         - name: foo
           image: foo:latest
@@ -55,3 +62,45 @@ spec:
                 name: foo
                 port:
                   number: 80
+---
+apiVersion: policy.linkerd.io/v1beta2
+kind: HTTPRoute
+metadata:
+  name: foo-root-route
+  namespace: default
+spec:
+  parentRefs:
+    - name: foo
+      kind: Service
+      group: core
+      port: 80
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: "/"
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: Server
+metadata:
+  name: foo
+  namespace: default
+spec:
+  podSelector:
+    matchLabels:
+      app: foo
+  port: http
+  proxyProtocol: HTTP/2
+---
+apiVersion: policy.linkerd.io/v1beta1
+kind: ServerAuthorization
+metadata:
+  namespace: default
+  name: foo-from-nginx
+spec:
+  server:
+    name: foo
+  client:
+    meshTLS:
+      identities:
+        - "ingress-nginx.ingress-nginx.serviceaccount.identity.linkerd.cluster.local"
