Get grafana working

--- a/infra/linkerd/manifests.yaml
+++ b/infra/linkerd/manifests.yaml
@@ -2,7 +2,7 @@
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: linkerd-viz-ingress
+  name: linkerd-viz
   namespace: linkerd-viz
   annotations:
     nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
@@ -23,3 +23,18 @@ spec:
                 name: web
                 port:
                   number: 8084
+---
+apiVersion: policy.linkerd.io/v1alpha1
+kind: AuthorizationPolicy
+metadata:
+  name: prometheus-grafana-admin
+  namespace: linkerd-viz
+spec:
+  requiredAuthenticationRefs:
+    - kind: ServiceAccount
+      name: grafana
+      namespace: grafana
+  targetRef:
+    group: policy.linkerd.io
+    kind: Server
+    name: prometheus-admin
