--- a/infra/grafana/values.yaml
+++ b/infra/grafana/values.yaml
@@ -1,8 +1,25 @@
-ingress:
-  enabled: true
-  ingressClassName: nginx
-  hosts:
-    - grafana.localhost
+podAnnotations:
+  linkerd.io/inject: enabled
+
+grafana.ini:
+  server:
+    root_url: "%(protocol)s://%(domain)s:/grafana/"
+  auth:
+    disable_login_form: true
+  auth.anonymous:
+    enabled: true
+    org_role: Admin
+  auth.basic:
+    enabled: false
+  analytics:
+    check_for_updates: false
+  panels:
+    disable_sanitize_html: true
+  log:
+    mode: console
+  log.console:
+    format: text
+    level: info
 
 adminUser: admin
 adminPassword: admin
@@ -11,11 +28,15 @@ datasources:
   datasources.yaml:
     apiVersion: 1
     datasources:
-      - name: Prometheus
+      - name: prometheus
         type: prometheus
-        url: http://prometheus.linkerd-viz.svc.cluster.local:9090
         access: proxy
+        orgId: 1
+        url: http://prometheus.linkerd-viz.svc.cluster.local:9090
         isDefault: true
+        jsonData:
+          timeInterval: "5s"
+        editable: true
 
 dashboardProviders:
   dashboardproviders.yaml:
@@ -32,11 +53,76 @@ dashboardProviders:
 
 dashboards:
   default:
-    linkerd-routes:
-      gnetId: 11868
-      revision: 1
-      datasource: Prometheus
-    linkerd-authority:
-      gnetId: 14261
-      revision: 1
-      datasource: Prometheus
+    # all these charts are hosted at https://grafana.com/grafana/dashboards/{id}
+    top-line:
+      gnetId: 15474
+      revision: 4
+      datasource: prometheus
+    health:
+      gnetId: 15486
+      revision: 3
+      datasource: prometheus
+    kubernetes:
+      gnetId: 15479
+      revision: 2
+      datasource: prometheus
+    namespace:
+      gnetId: 15478
+      revision: 3
+      datasource: prometheus
+    deployment:
+      gnetId: 15475
+      revision: 6
+      datasource: prometheus
+    pod:
+      gnetId: 15477
+      revision: 3
+      datasource: prometheus
+    service:
+      gnetId: 15480
+      revision: 3
+      datasource: prometheus
+    route:
+      gnetId: 15481
+      revision: 3
+      datasource: prometheus
+    authority:
+      gnetId: 15482
+      revision: 3
+      datasource: prometheus
+    cronjob:
+      gnetId: 15483
+      revision: 3
+      datasource: prometheus
+    job:
+      gnetId: 15487
+      revision: 3
+      datasource: prometheus
+    daemonset:
+      gnetId: 15484
+      revision: 3
+      datasource: prometheus
+    replicaset:
+      gnetId: 15491
+      revision: 3
+      datasource: prometheus
+    statefulset:
+      gnetId: 15493
+      revision: 3
+      datasource: prometheus
+    replicationcontroller:
+      gnetId: 15492
+      revision: 4
+      datasource: prometheus
+    prometheus:
+      gnetId: 15489
+      revision: 2
+      datasource: prometheus
+    prometheus-benchmark:
+      gnetId: 15490
+      revision: 2
+      datasource: prometheus
+    multicluster:
+      gnetId: 15488
+      revision: 3
+      datasource: prometheus
