cleanup and organization

--- a/apps/bar/manifests/l5d-auth-server.yaml
+++ b/apps/bar/manifests/l5d-auth-server.yaml
@@ -5,10 +5,10 @@ apiVersion: policy.linkerd.io/v1beta1
 kind: ServerAuthorization
 metadata:
   namespace: default
-  name: baz
+  name: bar
 spec:
   server:
-    name: baz
+    name: bar
   client:
     meshTLS:
       identities:
