--- a/apps/baz/manifests/l5d-auth-routes.yaml
+++ b/apps/baz/manifests/l5d-auth-routes.yaml
@@ -1,7 +1,6 @@
 # Route Authorization
 # https://linkerd.io/2-edge/tasks/configuring-per-route-policy/
 ---
-# auth - baz
 apiVersion: policy.linkerd.io/v1alpha1
 kind: AuthorizationPolicy
 metadata:
@@ -11,7 +10,7 @@ spec:
   targetRef:
     group: policy.linkerd.io
     kind: HTTPRoute
-    name: baz-foo-bar-inbound-route
+    name: baz-foo-bar-inbound
   requiredAuthenticationRefs:
     - name: baz-bar-authn
       kind: MeshTLSAuthentication
