--- a/apps/baz/manifests/l5d-routes-in.yaml
+++ b/apps/baz/manifests/l5d-routes-in.yaml
@@ -5,7 +5,7 @@
 apiVersion: policy.linkerd.io/v1beta2
 kind: HTTPRoute
 metadata:
-  name: baz-root-inbound-route
+  name: baz-root-inbound
   namespace: default
 spec:
   parentRefs:
@@ -22,7 +22,7 @@ spec:
 apiVersion: policy.linkerd.io/v1beta2
 kind: HTTPRoute
 metadata:
-  name: baz-foo-bar-inbound-route
+  name: baz-foo-bar-inbound
   namespace: default
 spec:
   parentRefs:
